--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <button class="cta-button">Explore Destinations</button>
             </div>
             <div class="hero-image">
-                <img src="images\image.jpeg" alt="Travel Destination">
+                <img src="images/image.jpeg" alt="Travel Destination">
             </div>
         </div>
     </section>
@@ -52,7 +52,7 @@
             <div class="feature-cards">
                 <div class="feature-card destination-card">
                     <div class="destination-img">
-                        <img src="images\image 1.jpeg" alt="Paris">
+                        <img src="images/image 1.jpeg" alt="Paris">
                     </div>
                     <h3>Paris, France</h3>
                     <p>Experience the romance and charm of the City of Lights.</p>
@@ -60,7 +60,7 @@
                 </div>
                 <div class="feature-card destination-card">
                     <div class="destination-img">
-                        <img src="images\image 2.jpeg" alt="Bali">
+                        <img src="images/image 2.jpeg" alt="Bali">
                     </div>
                     <h3>Bali, Indonesia</h3>
                     <p>Relax on pristine beaches and immerse in rich culture.</p>
@@ -68,7 +68,7 @@
                 </div>
                 <div class="feature-card destination-card">
                     <div class="destination-img">
-                        <img src="images\image 3.jpeg" alt="Santorini">
+                        <img src="images/image 3.jpeg" alt="Santorini">
                     </div>
                     <h3>Santorini, Greece</h3>
                     <p>Discover the stunning white architecture and blue waters.</p>
@@ -132,7 +132,7 @@
             <div class="testimonial-slider">
                 <div class="testimonial-card">
                     <div class="testimonial-img">
-                        <img src="images\women.jpg" alt="Sarah Johnson">
+                        <img src="images/women.jpg" alt="Sarah Johnson">
                     </div>
                     <div class="testimonial-content">
                         <p>"My trip to Bali with Wanderlust was absolutely amazing! Everything was perfectly organized, and the guides were knowledgeable and friendly."</p>
@@ -227,7 +227,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 Wanderlust Travel. All rights reserved.</p>
+                <p>&copy; 2023 Where2Go Travel. All rights reserved.</p>
             </div>
         </div>
     </footer>
