--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h3>Email</h3>
-                            <p>info@wanderlust.com</p>
+                            <p>info@Where2Go.com</p>
                         </div>
                     </div>
                 </div>
